
	libmsgbase.a:
		If a message area becomes empty after a pack, all lastread
		pointers are reset to zero.

	mbout:
		Code cleanup for nodelist processing.

	mbfido:
		Added compile directive for full newsgate.

	mbindex:
		Code cleanup for nodelist processing.
		Added a extra check to see if nodelist datalines are valid to
		prevent segfaults on Skynet nodelists.

	mbnntp:
		If compiled in full newsmode, this program acts like a dummy.

	mbsebbs:
		Added user@domain login for pop3 mailboxes.
		If pop3 login fails, the bbs won't hang.
		If a users homedirectory doesn't exist, a correct error message
		is displayed and logged.

	mbsetup:
		Added user@domain login for pop3 servers in screen 1.12.
		Added compile directive for full newsgate to prevent newsgroup
		name creation in default compiled mode.
		When editing files, after leaving a file record the file range
		displayed stays around the last area.
		If a message area is deleted and a rulefile is present, this
		rulefile is deleted too.
		When a new golded.inc file is written, only fidonet records
		that are active are written.


v0.61.0		06-Jun-2004 - 20-Jun-2004

	libnodelist.a:
		Implemented the ICM flag (FSP-1033).

	mbmsg:
		With te post command, the right number of commandline options
		is checked, if this is wrong the help message is displayed.
		If a message is posted in a local area, no echomail.jam is
		updated and the mailout semafore is not set.
		Added checks in the mbmsg post command if the To parameter has
		the correct syntax for netmail and all other areas.
		Fixed parameter count if post is used with the -q option.
		Will now return a non-zero error if the post() function
		failed.

	mbout:
		Implemented the ICM flag (FSP-1033).

	mbcico:
		Implemented the ICM flag (FSP-1033).

	mbtask:
		Implemented the ICM flag (FSP-1033).

	mbfile:
		The filenames in the html pages are now the long filenames.
		This fixes download problems with some mangled 8.3 filenames.

	mbsetup: